--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,14 +1,14 @@
-# Dependabot 設定
-# 依存関係の自動更新を管理します
+# Dependabot Configuration
+# Manages automatic dependency updates
 #
-# 機能:
-# - npm/yarn パッケージの更新を監視
-# - セキュリティ脆弱性を検出
-# - 自動でPRを作成
+# Features:
+# - Monitors npm/yarn package updates
+# - Detects security vulnerabilities
+# - Automatically creates PRs
 
 version: 2
 updates:
-  # npm/yarn の依存関係
+  # npm/yarn dependencies
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
@@ -22,7 +22,7 @@ updates:
       - "automated"
     commit-message:
       prefix: "chore(deps)"
-    # セキュリティアップデートは即時
+    # Security updates are immediate
     groups:
       production-dependencies:
         dependency-type: "production"
@@ -32,7 +32,7 @@ updates:
           - "minor"
           - "patch"
 
-  # GitHub Actions の更新
+  # GitHub Actions updates
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
